--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -23,6 +23,16 @@
                         </div>
                         <a (click)="alerta()" href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Forgot pwd?</a> </div>
                 </div>
+                <div class="row">
+                    <div class="col text-danger">
+                        <p *ngIf="campoNoValido('email')">
+                            El email es obligatorio y tiene que ser valido
+                        </p>
+                        <p *ngIf="campoNoValido('password')">
+                            El password es obligatorio y tiene que ser valido
+                        </p>
+                    </div>
+                </div>
                 <div class="form-group text-center m-t-20">
                     <div class="col-xs-12">
                         <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded" type="submit">Log In</button>
